Fix scrollbar and button colors
fix: horizontal scrollbar height
fix: grey buttons instead of green

--- a/styles/scrollbars.less
+++ b/styles/scrollbars.less
@@ -1,6 +1,7 @@
 ::-webkit-scrollbar {
     width: 5px;
-    height: 18px;
+    height: 5px;
+    background: @scrollbar-background-color !important;
 
     &-track {
          border: 0px;
