--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -69,8 +69,8 @@
 @overlay-border-color:     @base-border-color;
 
 @button-background-color-primary:  #00BCD4;
-@button-background-color:          darken(#009587, 5%);
-@button-background-color-hover:    darken(@button-background-color, 7%);
+@button-background-color:          #2F3D44;
+@button-background-color-hover:    lighten(@button-background-color, 12%);
 @button-background-color-selected: @button-background-color-hover;
 @button-border-color:              @base-border-color;
 
